--- a/weight-visualizer/build.gradle
+++ b/weight-visualizer/build.gradle
@@ -3,13 +3,13 @@ buildscript {
 	ext.spring_boot_version = '2.0.3.RELEASE'
 	repositories {
 		jcenter()
+		mavenCentral()
 	}
 	dependencies {
 		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 		classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlin_version"
 		classpath "io.spring.gradle:dependency-management-plugin:1.0.4.RELEASE"
 		classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
-
 	}
 }
 
@@ -25,11 +25,12 @@ jar {
 
 repositories {
 	jcenter()
+	mavenCentral()
 }
 
 dependencies {
-//    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-//    compile 'org.springframework.boot:spring-boot-starter-web'
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'org.springframework.boot:spring-boot-starter-web'
 
 	compile 'org.jetbrains.kotlin:kotlin-stdlib'
 	compile 'org.jetbrains.kotlin:kotlin-reflect'
@@ -37,6 +38,11 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web'
 	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	compile 'org.springframework.boot:spring-boot-starter-data-rest'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	runtime 'com.h2database:h2'
+	compile 'org.hibernate:hibernate-entitymanager'
+
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
