--- a/weight-visualizer/build.gradle
+++ b/weight-visualizer/build.gradle
@@ -40,8 +40,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-rest'
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	runtime 'com.h2database:h2'
-	compile 'org.hibernate:hibernate-entitymanager'
+	compile("org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE")
+	compile("com.h2database:h2:1.4.191")
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
