--- a/weight-visualizer/build.gradle
+++ b/weight-visualizer/build.gradle
@@ -47,6 +47,7 @@ dependencies {
 	compile('io.springfox:springfox-swagger-ui:2.9.2')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('junit:junit:4.12')
 }
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
