not completed dockerfile

--- a/weight-visualizer/Dockerfile
+++ b/weight-visualizer/Dockerfile
@@ -6,4 +6,16 @@ WORKDIR /code
 // установить пакет
 RUN pip install -r requirements.txt
 // запустить приложение
-CMD ["python", "app.py"]
+CMD /usr/bin/java \
+    -Xms256m \
+    -Xmx256m \
+    -Xss256k \
+    -XX:MaxDirectMemorySize=8m \
+    -XX:MaxMetaspaceSize=70m \
+    -XX:ReservedCodeCacheSize=40m \
+    -XX:+UseSerialGC \
+    -XX:+PrintFlagsFinal \
+    -XX:CICompilerCount=1 \
+    -XX:-TieredCompilation \
+    -Djava.awt.headless=true \
+    -jar weight-visualizer.jar
